--- a/src/analytical-model/package.json
+++ b/src/analytical-model/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "analytical-model.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "https": "^1.0.0"
+    "eslint": "^9.22.0",
+    "https": "^1.0.0",
+    "jest": "^29.7.0"
   }
 }
