--- a/src/data-retrieve/package.json
+++ b/src/data-retrieve/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "data-retrieve.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.758.0"
+    "@aws-sdk/client-s3": "^3.758.0",
+    "eslint": "^9.22.0",
+    "jest": "^29.7.0"
   }
 }
