--- a/src/analytical-model/package.json
+++ b/src/analytical-model/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "https": "^1.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "eslint": "^9.22.0",
-    "https": "^1.0.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0"
   }
 }
