--- a/src/data-collect/package.json
+++ b/src/data-collect/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
     "axios": "^1.8.3",
-    "cheerio": "^1.0.0",
+    "cheerio": "^1.0.0"
+  },
+  "devDependencies": {
     "eslint": "^9.22.0",
     "jest": "^29.7.0"
   }
