--- a/src/data-retrieve/package.json
+++ b/src/data-retrieve/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/client-s3": "^3.758.0"
+  },
+  "devDependencies": {
     "eslint": "^9.22.0",
     "jest": "^29.7.0"
   }
