--- a/src/data-collect/package.json
+++ b/src/data-collect/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
+    "aws-sdk-client-mock": "^4.1.0",
     "axios": "^1.8.3",
-    "cheerio": "^1.0.0"
+    "cheerio": "^1.0.0",
+    "cherio": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "eslint": "^9.22.0",
