--- a/src/data-retrieve/package.json
+++ b/src/data-retrieve/package.json
@@ -14,6 +14,8 @@
     "@aws-sdk/client-s3": "^3.758.0"
   },
   "devDependencies": {
+    "@smithy/util-stream": "^4.1.2",
+    "aws-sdk-client-mock": "^4.1.0",
     "eslint": "^9.22.0",
     "jest": "^29.7.0"
   }
