--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,3 +56,14 @@ jobs:
         with:
           name: lambda-package-${{ matrix.service }}
           path: terraform/lambda-deployment-package-${{ matrix.service }}.zip
+          retention-days: 10
+  
+  mark-success:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Upload CI success marker
+        uses: actions/upload-artifact@v4
+        with:
+          name: ci-success
+          path: README.md
