--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,12 +58,15 @@ jobs:
           path: terraform/lambda-deployment-package-${{ matrix.service }}.zip
           retention-days: 10
   
-  mark-success:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Upload CI success marker
-        uses: actions/upload-artifact@v4
-        with:
-          name: ci-success
-          path: README.md
+mark-success:
+  runs-on: ubuntu-latest
+  needs: test
+  steps:
+    - name: Create dummy file for CI success marker
+      run: echo "CI successfully completed" > ci-success-marker.txt
+
+    - name: Upload CI success marker
+      uses: actions/upload-artifact@v4
+      with:
+        name: ci-success
+        path: ci-success-marker.txt
