--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,13 +60,10 @@ jobs:
   
   mark-success:
     runs-on: ubuntu-latest
-    needs: test  # Ensures all test jobs finish before marking CI success
+    needs: test
     steps:
-      - name: Create dummy file for CI success marker
-        run: echo "CI successfully completed" > ci-success-marker.txt  # Creates a file
-
       - name: Upload CI success marker
         uses: actions/upload-artifact@v4
         with:
           name: ci-success
-          path: ci-success-marker.txt  # Use the created file as an artifact
+          path: ci-success-marker.txt
