--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
+      - name: Create success marker file
+        run: echo "CI completed successfully" > ci-success-marker.txt
+
       - name: Upload CI success marker
         uses: actions/upload-artifact@v4
         with:
