--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,10 +40,14 @@ jobs:
       - name: Terraform Plan
         run: |
           cd terraform
-          terraform plan -input=false
+          terraform plan -input=false \
+            -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
+            -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
+            -var="s3_bucket_name=$BUCKET_NAME"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' # Only deploy on main branch
