--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,13 +25,18 @@ jobs:
           cd src/data-collect
           zip -r ../../terraform/lambda-deployment-package-collect.zip .
 
-      - name: Package Analytical Lambda function
+      - name: Package data retrieve Lambda function
         run: |
           cd src/data-retrieve
           zip -r ../../terraform/lambda-deployment-package-retrieve.zip .
 
       - name: List downloaded packages
         run: ls -la terraform/
+
+      - name: echo AWS credentials
+        run: |
+          echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"
+          echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY"
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
