--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,8 +35,13 @@ jobs:
 
       - name: echo AWS credentials
         run: |
-          echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"
-          echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY"
+          echo "aws_access_key_id=$AWS_ACCESS_KEY_ID"
+          echo "aws_secret_access_key=$AWS_SECRET_ACCESS_KEY"
+          echo "s3_bucket_name=$BUCKET_NAME"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
