--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -59,11 +59,13 @@ jobs:
           terraform plan -input=false \
             -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
             -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
-            -var="s3_bucket_name=$BUCKET_NAME"
+            -var="s3_bucket_name=$BUCKET_NAME" \
+            -var="alert_email=$ALERT_EMAIL"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
+          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }} 
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' # Only deploy on main branch
@@ -72,8 +74,10 @@ jobs:
           terraform apply -auto-approve -input=false \
             -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
             -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
-            -var="s3_bucket_name=$BUCKET_NAME"
+            -var="s3_bucket_name=$BUCKET_NAME" \
+            -var="alert_email=$ALERT_EMAIL"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
+          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }} 
