--- a/src/data-collect/package.json
+++ b/src/data-collect/package.json
@@ -5,7 +5,8 @@
   "main": "data-collect.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "eslint": "^9.22.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "typescript": "^5.8.2"
   }
 }
