--- a/src/data-retrieve/package.json
+++ b/src/data-retrieve/package.json
@@ -5,7 +5,8 @@
   "main": "data-retrieve.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@smithy/util-stream": "^4.1.2",
     "aws-sdk-client-mock": "^4.1.0",
     "eslint": "^9.22.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "typescript": "^5.8.2"
   }
 }
