--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    timeout-minutes: 15
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -36,30 +37,35 @@ jobs:
       - name: List downloaded packages
         run: ls -la terraform/
 
-      - name: echo AWS credentials
-        run: |
-          echo "aws_access_key_id=$AWS_ACCESS_KEY_ID"
-          echo "aws_secret_access_key=$AWS_SECRET_ACCESS_KEY"
-          echo "s3_bucket_name=$BUCKET_NAME"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.11.2
+
+      - name: Configure AWS credentials
+        run: |
+          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          echo "AWS credentials configured"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Terraform Init
         run: |
           cd terraform
           terraform init
 
-      - name: Terraform Plan
+      - name: Select Terraform Workspace
         run: |
           cd terraform
-          terraform plan -input=false \
+          terraform workspace select default || terraform workspace new default
+
+      - name: Terraform Plan
+        id: plan
+        run: |
+          cd terraform
+          terraform plan -input=false -out=tfplan \
             -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
             -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
             -var="s3_bucket_name=$BUCKET_NAME" \
@@ -71,17 +77,19 @@ jobs:
           ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }}
 
       - name: Terraform Apply
-        timeout-minutes: 10
         if: github.ref == 'refs/heads/main' # Only deploy on main branch
         run: |
           cd terraform
-          terraform apply -auto-approve -input=false \
-            -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
-            -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
-            -var="s3_bucket_name=$BUCKET_NAME" \
-            -var="alert_email=$ALERT_EMAIL"
+          terraform apply -auto-approve -input=false tfplan
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
           ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }}
+
+      - name: Cleanup
+        if: always()
+        run: |
+          cd terraform
+          rm -f lambda-deployment-package-*.zip tfplan
+          echo "Cleanup completed"
