--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,6 +7,10 @@ on:
     types:
       - completed
 
+env:
+  TF_LOG: TRACE
+  TF_LOG_PATH: /tmp/terraform.log
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -41,15 +45,7 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.11.2
-
-      - name: Configure AWS credentials
-        run: |
-          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          echo "AWS credentials configured"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          terraform_wrapper: false
 
       - name: Terraform Init
         run: |
@@ -62,14 +58,14 @@ jobs:
           terraform workspace select default || terraform workspace new default
 
       - name: Terraform Plan
-        id: plan
         run: |
           cd terraform
           terraform plan -input=false -out=tfplan \
             -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
             -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
             -var="s3_bucket_name=$BUCKET_NAME" \
-            -var="alert_email=$ALERT_EMAIL"
+            -var="alert_email=$ALERT_EMAIL" \
+            -parallelism=1  # Reduce parallelism to make logs clearer
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -77,19 +73,26 @@ jobs:
           ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }}
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' # Only deploy on main branch
+        if: github.ref == 'refs/heads/main'
         run: |
           cd terraform
-          terraform apply -auto-approve -input=false tfplan
+          terraform apply -auto-approve -input=false -parallelism=1 tfplan
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
           ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }}
 
+      - name: Upload Terraform logs if apply hangs or fails
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: terraform-logs
+          path: /tmp/terraform.log
+          retention-days: 5
+
       - name: Cleanup
         if: always()
         run: |
           cd terraform
           rm -f lambda-deployment-package-*.zip tfplan
-          echo "Cleanup completed"
