--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,61 +11,49 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    timeout-minutes: 15
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Package Analytical Lambda function
         run: |
           cd src/analytical-model
-          npm install
           zip -r ../../terraform/lambda-deployment-package-analyse.zip .
-
+  
       - name: Package data collection Lambda function
         run: |
           cd src/data-collect
-          npm install
           zip -r ../../terraform/lambda-deployment-package-collect.zip .
-
       - name: Package data retrieve Lambda function
         run: |
           cd src/data-retrieve
-          npm install
           zip -r ../../terraform/lambda-deployment-package-retrieve.zip .
-
       - name: List downloaded packages
         run: ls -la terraform/
+
+      - name: echo AWS credentials
+        run: |
+          echo "aws_access_key_id=$AWS_ACCESS_KEY_ID"
+          echo "aws_secret_access_key=$AWS_SECRET_ACCESS_KEY"
+          echo "s3_bucket_name=$BUCKET_NAME"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.11.2
 
-      - name: Configure AWS credentials
-        run: |
-          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          echo "AWS credentials configured"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
       - name: Terraform Init
         run: |
           cd terraform
           terraform init
-
-      - name: Terraform Import Existing Lambdas
-        run: |
-          cd terraform
-          
-          terraform import aws_lambda_function.nba_scraper_lambda nba-scraper-lambda || echo "nba_scraper_lambda already imported"
-          terraform import aws_lambda_function.nba_retriever_lambda nba-retriever-lambda || echo "nba_retriever_lambda already imported"
-          terraform import aws_lambda_function.nba_analyse_lambda nba-analyse-lambda || echo "nba_analyse_lambda already imported"
-
       - name: Terraform Plan
-        id: plan
         run: |
           cd terraform
-          terraform plan -input=false -out=tfplan \
+          terraform plan -input=false \
             -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
             -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
             -var="s3_bucket_name=$BUCKET_NAME" \
@@ -73,23 +61,20 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }}
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
+          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }} 
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' # Only deploy on main branch
         run: |
           cd terraform
-          terraform apply -auto-approve -input=false tfplan
+          terraform apply -auto-approve -input=false \
+            -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
+            -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
+            -var="s3_bucket_name=$BUCKET_NAME" \
+            -var="alert_email=$ALERT_EMAIL"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }}
-
-      - name: Cleanup
-        if: always()
-        run: |
-          cd terraform
-          rm -f lambda-deployment-package-*.zip tfplan
-          echo "Cleanup completed"
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
+          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }} 
