--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -54,11 +54,31 @@ jobs:
       - name: Terraform Import Existing Lambdas
         run: |
           cd terraform
-          
-          # Try importing each Lambda. If it's already managed, skip.
-          terraform import aws_lambda_function.nba_scraper_lambda nba-scraper-lambda || echo "nba_scraper_lambda already imported"
-          terraform import aws_lambda_function.nba_retriever_lambda nba-retriever-lambda || echo "nba_retriever_lambda already imported"
-          terraform import aws_lambda_function.nba_analyse_lambda nba-analyse-lambda || echo "nba_analyse_lambda already imported"
+          terraform import \
+            -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
+            -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
+            -var="s3_bucket_name=$BUCKET_NAME" \
+            -var="alert_email=$ALERT_EMAIL" \
+            aws_lambda_function.nba_scraper_lambda nba-scraper-lambda || echo "nba_scraper_lambda already imported"
+
+          terraform import \
+            -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
+            -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
+            -var="s3_bucket_name=$BUCKET_NAME" \
+            -var="alert_email=$ALERT_EMAIL" \
+            aws_lambda_function.nba_retriever_lambda nba-retriever-lambda || echo "nba_retriever_lambda already imported"
+
+          terraform import \
+            -var="aws_access_key_id=$AWS_ACCESS_KEY_ID" \
+            -var="aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
+            -var="s3_bucket_name=$BUCKET_NAME" \
+            -var="alert_email=$ALERT_EMAIL" \
+            aws_lambda_function.nba_analyse_lambda nba-analyse-lambda || echo "nba_analyse_lambda already imported"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
+          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }}
 
       - name: Terraform Plan
         run: |
