--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,9 +76,9 @@ jobs:
       - name: Setup Pandoc
         uses: r-lib/actions/setup-pandoc@v2
 
-      - name: Convert combined report to PDF
+      - name: Convert report to PDF
         run: |
-          pandoc combined-test-report.md -o combined-test-report.pdf
+          pandoc test-report-${{ matrix.service }}.md -o test-report-${{ matrix.service }}.pdf
 
       # Upload test report as artifact
       - name: Upload test report
