--- a/src/data-collect/package.json
+++ b/src/data-collect/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "data-collect.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose --coverage --coverageReporters='json-summary' --coverageReporters='text-summary'",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
